agnhost-lin.yml
apiVersion: v1
kind: Pod
metadata:
  name: agnhost-busybox
  namespace: default
  labels:
    app: MyApp
spec:
  containers:
  - image: "projects.registry.vmware.com/antrea/agnhost:2.26"
    args:
      - netexec
      - --http-port=80
      - --udp-port=80
    imagePullPolicy: IfNotPresent
    name: netexec
  restartPolicy: Always
  tolerations:
          #hostNetwork: true
  - key: "node-role.kubernetes.io/master"
    operator: "Exists"
    effect: "NoSchedule"
  - key: "node-role.kubernetes.io/control-plane"
    operator: "Exists"
    effect: "NoSchedule"
  nodeSelector:
    node-role.kubernetes.io/control-plane: ""
