agnhost-pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: agnhost-busybox1
  namespace: default
  labels:
    app: MyApp
spec:
  nodeName: a-ms-2006-1
  containers:
  - image: "projects.registry.vmware.com/antrea/agnhost:2.26"
    args:
      - netexec
      - --http-port=80
      - --udp-port=80
    imagePullPolicy: IfNotPresent
    name: netexec
  restartPolicy: Always
