agnhost0-win.yml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  namespace: default
  labels:
    app: webserver
spec:
  nodeName: a-ms-2004-win-1
  containers:
  - image: "harbor-repo.vmware.com/dockerhub-proxy-cache/e2eteam/agnhost:2.20"
    args: ["netexec", "--http-port=8080","--udp-port=8081"]
    ports:
    - containerPort: 8080
      name: http
    imagePullPolicy: IfNotPresent
    name: webserver
  restartPolicy: Always
