busybox-win.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: default
  labels:
    app: busybox-win
spec:
  containers:
  - image: projects.registry.vmware.com/antrea/e2eteam-busybox:1.29-windows-amd64-1809
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
