g-pod-win0.yml
apiVersion: v1
kind: Pod
metadata:
  name: pwsh1
  namespace: trate
spec:
  nodeName: "a-ms-2006-win-0"
  containers:
  - name: powershell
    image: mcr.microsoft.com/windows/servercore:1809
    args:
    - powershell.exe
    - -Command
    - "Start-Sleep 360000"
    imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: windows
