google-lin.yml
apiVersion: v1
kind: Pod
metadata:
  name: tbx
  namespace: trate
spec:
  containers:
  - name: toolbox
    image: gcr.io/google-containers/toolbox:latest
    args: ["/bin/bash", "-c", "while true; do sleep 10; done"]
    imagePullPolicy: IfNotPresent
  nodeSelector:
    kubernetes.io/os: linux
