pod1-win.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1-win
  namespace: default
  labels:
    app: busybox1-win
spec:
  nodeName: a-ms-2004-win-1
  containers:
  - image: "projects.registry.vmware.com/antrea/e2eteam-busybox:1.29-windows-amd64-1809"
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
