pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
  namespace: default
  labels:
    app: busybox1
spec:
  nodeName: "a-ms-2004-1"
  containers:
  - image: projects.registry.vmware.com/library/busybox
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
