svc-ipv6.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service-ipv6
  labels:
    app.kubernetes.io/name: MyApp
spec:
  ipFamilies:
  - IPv6
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
