svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-svc
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
